--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     <!-- Card 1 -->
     <div class="h-72 w-72 group overflow-hidden relative border border-black hover:border-white transition shadow-lg">
-      <img src="1.png"
+      <img src="1.jpg"
         class="w-full h-full object-cover w-full h-auto opacity-90 transition duration-500 group-hover:brightness-50" />
       <div class="absolute inset-0 bg-black/20 group-hover:bg-black/40 transition duration-500"></div>
       <div class="absolute bottom-5 left-5 text-white text-lg font-semibold drop-shadow-md">Motion Graphics</div>
@@ -76,7 +76,7 @@
 
     <!-- Card 2 -->
     <div class="h-72 w-72 group overflow-hidden relative border border-black hover:border-white transition shadow-lg">
-      <img src="2.png"
+      <img src="2.jpg"
         class="w-full h-full object-cover opacity-90 transition duration-500 group-hover:brightness-50" />
       <div class="absolute inset-0 bg-black/20 group-hover:bg-black/40 transition duration-500"></div>
       <div class="absolute bottom-5 left-5 text-white text-lg font-semibold drop-shadow-md">Paid Work</div>
