--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 <!-- ABOUT ME -->
 <section id="about" class="md:flex md:items-center max-w-3xl mx-auto px-5 py-20 text-center">
   <img 
-    src="https://i.ytimg.com/vi/eIg5KFUIqF0/hq720.jpg?sqp=-oaymwEcCK4FEIIDSEbyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLAix4yLsupjgGgYELreiLIp2TnAOg" 
+    src="me.jpg" 
     class="w-72 h-72 object-cover mx-auto grayscale mb-5 shadow-lg md:w-1/3" 
   />
 
