--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 </section>
 
 <!-- ABOUT ME -->
-<section id="about" class="md:flex md:items-center max-w-3xl mx-auto px-5 py-20 text-center">
+<section id="about" class="md:flex md:items-center max-w-3xl mx-auto px-5 overflow-hidden py-20 text-center">
   <img 
     src="me.jpg" 
     class="w-72 h-72 object-cover mx-auto grayscale mb-5 shadow-lg md:w-1/3" 
