--- a/index.html
+++ b/index.html
@@ -166,10 +166,13 @@
 
 <!-- ABOUT ME -->
 <section id="about" class="md:flex md:items-center max-w-3xl mx-auto px-5 overflow-hidden py-20 text-center">
-  <img 
+  <div class="overflow-hidden w-full h-full">
+      <img 
     src="me.jpg" 
     class="w-72 h-72 object-cover mx-auto grayscale mb-5 shadow-lg md:w-1/3" 
   />
+  </div>
+
 
   <div class="md:w-2/3 md:pl-20">
     <h2 class="font-extrabold text-2xl sm:text-3xl mb-4 text-white drop-shadow-md">ABOUT ME</h2>
