Update Instagram link and handle username change

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 
     <!-- Instagram -->
    <a 
-  href="https://www.instagram.com/hacr.rr09?igsh=YzBpanNvc25pMTF3" 
+  href="https://www.instagram.com/_editor.issues?igsh=YnkyZGc2YTh6OXBz" 
   target="_blank"
   class="flex items-center gap-3 transition group"
 >
@@ -306,7 +306,7 @@
            group-hover:via-[#d62976] group-hover:to-[#4f5bd5] 
            group-hover:bg-clip-text group-hover:text-transparent"
   >
-    @hacr.rr09
+    @_editor.issues
   </span>
 </a>
 
