--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <div class="grid grid-cols-1 sm:grid-cols-3 gap-10">
 
     <!-- Card 1 -->
-    <div class="h-72 w-72 group overflow-hidden relative border border-black hover:border-white transition shadow-lg">
+    <div class="work h-72 w-72 group overflow-hidden relative border border-black hover:border-white transition shadow-lg">
       <img src="1.jpg"
         class="w-full h-full object-cover w-full h-auto opacity-90 transition duration-500 group-hover:brightness-50" />
       <div class="absolute inset-0 bg-black/20 group-hover:bg-black/40 transition duration-500"></div>
@@ -75,7 +75,7 @@
     </div>
 
     <!-- Card 2 -->
-    <div class="h-72 w-72 group overflow-hidden relative border border-black hover:border-white transition shadow-lg">
+    <div class="work h-72 w-72 group overflow-hidden relative border border-black hover:border-white transition shadow-lg">
       <img src="2.jpg"
         class="w-full h-full object-cover opacity-90 transition duration-500 group-hover:brightness-50" />
       <div class="absolute inset-0 bg-black/20 group-hover:bg-black/40 transition duration-500"></div>
@@ -313,8 +313,17 @@
   </div>
 </footer>
 <script>
-  document.getElementById("work").addEventListener("click", function () {
-     window.location.href = "vid.html";   // redirect to your custom page
+  const vids = document.querySelectorAll(".work"); // select ALL boxes
+
+  vids.forEach((vid, index) => {
+    vid.addEventListener("click", () => {
+      localStorage.setItem("videoIndex", index);
+      console.log(index)
+
+      setTimeout(() => {
+        window.location.href = "vid.html";
+      }, 700);
+    });
   });
 </script>
 </body>
