--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
   <div class="overflow-hidden w-full h-full">
       <img 
     src="me.jpg" 
-    class="w-72 h-72 object-cover mx-auto grayscale mb-5 shadow-lg md:w-1/3" 
+    class="w-72 h-72 object-cover mx-auto grayscale mb-5 shadow-lg rounded" 
   />
   </div>
 
