Change shadow class to shadow-lg rounded-lg

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
   <div class="overflow-hidden w-full h-full">
       <img 
     src="me.jpg" 
-    class="w-72 h-72 object-cover mx-auto grayscale mb-5 shadow-lg rounded" 
+    class="w-72 h-72 object-cover mx-auto grayscale mb-5 shadow-lg rounded-lg" 
   />
   </div>
 
