--- a/index.html
+++ b/index.html
@@ -184,18 +184,21 @@
     <h3 class="font-semibold text-xl mb-6 text-white tracking-wide">Skills:</h3>
 
     <div class="grid grid-cols-2 gap-2 place-items-center w-fit mx-auto">
-      <span class="relative left-7 px-4 py-2 rounded-full bg-zinc-800 text-white font-medium whitespace-nowrap shadow">
-    Motion Graphics
-  </span>
-  <span class="px-4 py-2 rounded-full bg-zinc-800 text-white font-medium whitespace-nowrap shadow">
-    Captions
-  </span>
-  <span class="px-4 py-2 rounded-full bg-zinc-800 text-white font-medium whitespace-nowrap shadow">
-    Color Grading
-  </span>
-  <span class="px-4 py-2 rounded-full bg-zinc-800 text-white font-medium whitespace-nowrap shadow">
-    SFX & Audio Sync
-  </span>
+   <span class="relative left-7 px-4 py-2 rounded-full bg-zinc-800 text-white font-medium whitespace-nowrap shadow">
+  Motion Graphics
+</span>
+<span class="px-4 py-2 rounded-full bg-zinc-800 text-white font-medium whitespace-nowrap shadow">
+  Color Grading
+</span>
+<span class="px-4 py-2 rounded-full bg-zinc-800 text-white font-medium whitespace-nowrap shadow">
+  SFX & Audio Sync
+</span>
+<span class="px-4 py-2 rounded-full bg-zinc-800 text-white font-medium whitespace-nowrap shadow">
+  Music Selection
+</span>
+<span class="px-4 py-2 rounded-full bg-zinc-800 text-white font-medium whitespace-nowrap shadow">
+  Voice Enhancement
+</span>
 </div>
   </div>
 </section>
