--- a/index.html
+++ b/index.html
@@ -183,22 +183,22 @@
 
     <h3 class="font-semibold text-xl mb-6 text-white tracking-wide">Skills:</h3>
 
-    <div class="grid grid-cols-2 gap-6 place-items-center w-fit mx-auto">
-   <span class="relative left-7 px-4 py-2 rounded-full bg-zinc-800 text-white font-medium whitespace-nowrap shadow">
-  Motion Graphics
-</span>
-<span class="px-4 py-2 rounded-full bg-zinc-800 text-white font-medium whitespace-nowrap shadow">
-  Color Grading
-</span>
-<span class="px-4 py-2 rounded-full bg-zinc-800 text-white font-medium whitespace-nowrap shadow">
-  SFX & Audio Sync
-</span>
-<span class="px-4 py-2 rounded-full bg-zinc-800 text-white font-medium whitespace-nowrap shadow">
-  Music Selection
-</span>
-<span class="px-4 py-2 rounded-full bg-zinc-800 text-white font-medium whitespace-nowrap shadow">
-  Voice Enhancement
-</span>
+    <div class="flex flex-wrap gap-2">
+  <span class="px-3 py-1.5 rounded-full bg-zinc-800 text-white text-sm font-medium shadow">
+    Motion Graphics
+  </span>
+  <span class="px-3 py-1.5 rounded-full bg-zinc-800 text-white text-sm font-medium shadow">
+    Color Grading
+  </span>
+  <span class="px-3 py-1.5 rounded-full bg-zinc-800 text-white text-sm font-medium shadow">
+    SFX & Audio Sync
+  </span>
+  <span class="px-3 py-1.5 rounded-full bg-zinc-800 text-white text-sm font-medium shadow">
+    Music Selection
+  </span>
+  <span class="px-3 py-1.5 rounded-full bg-zinc-800 text-white text-sm font-medium shadow">
+    Voice Enhancement
+  </span>
 </div>
   </div>
 </section>
