--- a/index.html
+++ b/index.html
@@ -183,22 +183,26 @@
 
     <h3 class="font-semibold text-xl mb-6 text-white tracking-wide">Skills:</h3>
 
-    <div class="flex flex-wrap gap-2">
-  <span class="px-3 py-1.5 rounded-full bg-zinc-800 text-white text-sm font-medium shadow">
+    <div class="grid grid-cols-2 gap-3 justify-items-center">
+  <span class="px-5 py-2 rounded-full bg-zinc-800 text-white text-base font-medium shadow">
     Motion Graphics
   </span>
-  <span class="px-3 py-1.5 rounded-full bg-zinc-800 text-white text-sm font-medium shadow">
+  <span class="px-5 py-2 rounded-full bg-zinc-800 text-white text-base font-medium shadow">
     Color Grading
   </span>
-  <span class="px-3 py-1.5 rounded-full bg-zinc-800 text-white text-sm font-medium shadow">
+  <span class="px-5 py-2 rounded-full bg-zinc-800 text-white text-base font-medium shadow">
     SFX & Audio Sync
   </span>
-  <span class="px-3 py-1.5 rounded-full bg-zinc-800 text-white text-sm font-medium shadow">
+  <span class="px-5 py-2 rounded-full bg-zinc-800 text-white text-base font-medium shadow">
     Music Selection
   </span>
-  <span class="px-3 py-1.5 rounded-full bg-zinc-800 text-white text-sm font-medium shadow">
-    Voice Enhancement
-  </span>
+
+  <!-- Bottom Center -->
+  <div class="col-span-2 flex justify-center">
+    <span class="px-5 py-2 rounded-full bg-zinc-800 text-white text-base font-medium shadow">
+      Voice Enhancement
+    </span>
+  </div>
 </div>
   </div>
 </section>
