--- a/index.html
+++ b/index.html
@@ -184,16 +184,16 @@
     <h3 class="font-semibold text-xl mb-6 text-white tracking-wide">Skills:</h3>
 
     <div class="grid grid-cols-2 gap-3 justify-items-center">
-  <span class="px-5 py-1 rounded-full bg-zinc-800 text-white text-base font-medium shadow">
+  <span class="whitespace-nowrap px-5 py-1 rounded-full bg-zinc-800 text-white text-base font-medium shadow">
     Motion Graphics
   </span>
-  <span class="px-5 py-1 rounded-full bg-zinc-800 text-white text-base font-medium shadow">
+  <span class=" whitespace-nowrap px-5 py-1 rounded-full bg-zinc-800 text-white text-base font-medium shadow">
     Color Grading
   </span>
-  <span class="px-5 py-1 rounded-full bg-zinc-800 text-white text-base font-medium shadow">
+  <span class="whitespace-nowrap px-5 py-1 rounded-full bg-zinc-800 text-white text-base font-medium shadow">
     SFX & Audio Sync
   </span>
-  <span class="px-5 py-1 rounded-full bg-zinc-800 text-white text-base font-medium shadow">
+  <span class="whitespace-nowrap px-5 py-1 rounded-full bg-zinc-800 text-white text-base font-medium shadow">
     Music Selection
   </span>
 
