--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     <h3 class="font-semibold text-xl mb-6 text-white tracking-wide">Skills:</h3>
 
     <div class="grid grid-cols-2 gap-3 justify-items-center">
-  <span class="whitespace-nowrap px-5 py-1 rounded-full bg-zinc-800 text-white text-base font-medium shadow">
+  <span class="mx-1 whitespace-nowrap px-5 py-1 rounded-full bg-zinc-800 text-white text-base font-medium shadow">
     Motion Graphics
   </span>
   <span class="mx-1 whitespace-nowrap px-5 py-1 rounded-full bg-zinc-800 text-white text-base font-medium shadow">
@@ -193,7 +193,7 @@
   <span class="mx-1 whitespace-nowrap px-5 py-1 rounded-full bg-zinc-800 text-white text-base font-medium shadow">
     SFX & Audio Sync
   </span>
-  <span class="whitespace-nowrap px-5 py-1 rounded-full bg-zinc-800 text-white text-base font-medium shadow">
+  <span class="mx-1 whitespace-nowrap px-5 py-1 rounded-full bg-zinc-800 text-white text-base font-medium shadow">
     Music Selection
   </span>
 
