Add hover effect to profile image

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
   <div class="overflow-hidden w-full h-full">
       <img 
     src="me.jpg" 
-    class="w-72 h-72 object-cover mx-auto  mb-5 shadow-lg rounded-full" 
+    class="transition-transform duration-300 hover:scale-110 w-72 h-72 object-cover mx-auto  mb-5 shadow-lg rounded-full" 
   />
   </div>
 
