--- a/index.html
+++ b/index.html
@@ -187,13 +187,13 @@
   <span class="  whitespace-nowrap px-5 py-1 rounded-full bg-zinc-800 text-white text-base font-medium shadow">
     Motion Graphics
   </span>
-  <span class="md:left-5  whitespace-nowrap px-5 py-1 rounded-full bg-zinc-800 text-white text-base font-medium shadow">
+  <span class="md:left-5 relative  whitespace-nowrap px-5 py-1 rounded-full bg-zinc-800 text-white text-base font-medium shadow">
     Color Grading
   </span>
-  <span class="  whitespace-nowrap px-5 py-1 rounded-full bg-zinc-800 text-white text-base font-medium shadow">
+  <span class="md:right-3 relative  whitespace-nowrap px-5 py-1 rounded-full bg-zinc-800 text-white text-base font-medium shadow">
     SFX & Audio Sync
   </span>
-  <span class="md:left-3 relative left-2 whitespace-nowrap px-5 py-1 rounded-full bg-zinc-800 text-white text-base font-medium shadow">
+  <span class=" whitespace-nowrap px-5 py-1 rounded-full bg-zinc-800 text-white text-base font-medium shadow">
     Music Selection
   </span>
 
