--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
   <span class="  whitespace-nowrap px-5 py-1 rounded-full bg-zinc-800 text-white text-base font-medium shadow">
     Motion Graphics
   </span>
-  <span class="md:left-5 relative  whitespace-nowrap px-5 py-1 rounded-full bg-zinc-800 text-white text-base font-medium shadow">
+  <span class="left-3 relative  whitespace-nowrap px-5 py-1 rounded-full bg-zinc-800 text-white text-base font-medium shadow">
     Color Grading
   </span>
   <span class="md:right-3 relative  whitespace-nowrap px-5 py-1 rounded-full bg-zinc-800 text-white text-base font-medium shadow">
