--- a/index.html
+++ b/index.html
@@ -165,11 +165,11 @@
 </section>
 
 <!-- ABOUT ME -->
-<section id="about" class="md:flex md:items-center max-w-3xl mx-auto px-4 overflow-hidden py-20 text-center">
+<section id="about" class="md:flex md:items-center max-w-3xl mx-auto px-4 overflow-hidden py-20  text-center">
   <div class="overflow-hidden w-full h-full">
       <img 
     src="me.jpg" 
-    class="transition-transform duration-300 hover:scale-105w-72 h-72 object-cover mx-auto  mb-5 shadow-lg rounded-full" 
+    class="transition-transform duration-300 hover:scale-105 w-72 h-72 mt-3 object-cover mx-auto  mb-5 shadow-lg rounded-full" 
   />
   </div>
 
@@ -184,16 +184,16 @@
     <h3 class="font-semibold text-xl mb-6 text-white tracking-wide">Skills:</h3>
 
     <div class="grid grid-cols-2 gap-3 justify-items-center">
-  <span class="  whitespace-nowrap px-5 py-1 rounded-full bg-zinc-800 text-white text-base font-medium shadow">
+  <span class="md:right-12 relative  whitespace-nowrap px-5 py-1 rounded-full bg-zinc-800 text-white text-base font-medium shadow">
     Motion Graphics
   </span>
-  <span class="left-3 relative  whitespace-nowrap px-5 py-1 rounded-full bg-zinc-800 text-white text-base font-medium shadow">
+  <span class="right-2 relative  whitespace-nowrap px-5 py-1 rounded-full bg-zinc-800 text-white text-base font-medium shadow">
     Color Grading
   </span>
-  <span class="md:right-3 relative  whitespace-nowrap px-5 py-1 rounded-full bg-zinc-800 text-white text-base font-medium shadow">
+  <span class="md:right-16 relative  whitespace-nowrap px-5 py-1 rounded-full bg-zinc-800 text-white text-base font-medium shadow">
     SFX & Audio Sync
   </span>
-  <span class=" whitespace-nowrap px-5 py-1 rounded-full bg-zinc-800 text-white text-base font-medium shadow">
+  <span class="md:right-2 relative whitespace-nowrap px-5 py-1 rounded-full bg-zinc-800 text-white text-base font-medium shadow">
     Music Selection
   </span>
 
