--- a/index.html
+++ b/index.html
@@ -18,9 +18,14 @@
   <div class="absolute inset-0 bg-gradient-to-b from-black to-black/90 pointer-events-none"></div>
 
   <div class="container relative z-10 text-center max-w-3xl">
-    <h1 class="font-extrabold text-white uppercase leading-tight mb-5 text-4xl sm:text-5xl md:text-6xl tracking-tight drop-shadow-lg">
-      Your audience<br/>doesn’t remember<br/><span class="block text-transparent bg-clip-text bg-white">videos — they remember how they felt.</span>
-    </h1>
+    <h1 class="font-extrabold text-white uppercase mb-5 
+       text-3xl sm:text-4xl md:text-5xl lg:text-6xl 
+       leading-[1.15] tracking-tight drop-shadow-lg">
+  Your audience<br />
+  doesn’t remember videos —<br />
+  they remember<br />
+  how they felt.
+</h1>
 
     <p class="text-gray-300 opacity-90 mb-7 text-base sm:text-lg md:text-xl leading-relaxed max-w-2xl mx-auto">
       I create edits that make your message unforgettable.
@@ -96,71 +101,75 @@
 
   <div class="grid grid-cols-1 sm:grid-cols-4 lg:grid-cols-4 gap-8">
     <!-- Card 1: Video Editing -->
-    <div class="bg-zinc-800 p-6  shadow-xl hover:bg-zinc-800 transition transform hover:-translate-y-1">
-      <div class="flex items-center space-x-4 mb-4">
-        <!-- film icon -->
-        <svg class="w-10 h-10 text-zinc-300 shrink-0" viewBox="0 0 24 24" fill="none" aria-hidden="true">
-          <rect x="3" y="5" width="18" height="14" rx="2" stroke="currentColor" stroke-width="1.5" />
-          <path d="M7 5v14" stroke="currentColor" stroke-width="1.5" />
-          <path d="M7 8h2M7 12h2M7 16h2M15 8h2M15 12h2M15 16h2" stroke="currentColor" stroke-width="1.2" stroke-linecap="round"/>
-        </svg>
-        <h3 class="text-xl font-semibold text-white">Video Editing</h3>
-      </div>
-      <p class="opacity-80 text-left leading-relaxed text-sm">
-        Clean storytelling, rhythm-based cutting, professional pacing.
-      </p>
-    </div>
+    <div class="group bg-zinc-800 p-6 shadow-xl transition transform hover:-translate-y-2 hover:bg-white">
+  <div class="flex items-center space-x-4 mb-4">
+    <svg class="w-10 h-10 shrink-0 text-zinc-300 transition group-hover:text-black" viewBox="0 0 24 24" fill="none">
+      <rect x="3" y="5" width="18" height="14" rx="2" stroke="currentColor" stroke-width="1.5" />
+      <path d="M7 5v14" stroke="currentColor" stroke-width="1.5" />
+      <path d="M7 8h2M7 12h2M7 16h2M15 8h2M15 12h2M15 16h2" stroke="currentColor" stroke-width="1.2" stroke-linecap="round"/>
+    </svg>
+    <h3 class="text-xl font-semibold text-white transition group-hover:text-black">
+      Video Editing
+    </h3>
+  </div>
+  <p class="opacity-80 text-left leading-relaxed text-sm transition group-hover:text-black">
+    Clean storytelling, rhythm-based cutting, professional pacing.
+  </p>
+</div>
 
     <!-- Card 2: Color Grading -->
-    <div class="bg-zinc-800 p-6  shadow-xl hover:bg-zinc-800 transition transform hover:-translate-y-1">
-      <div class="flex items-center space-x-4 mb-4">
-        <!-- palette icon -->
-        <svg class="w-10 h-10 text-zinc-300 shrink-0" viewBox="0 0 24 24" fill="none" aria-hidden="true">
-          <path d="M12 21a8 8 0 1 0 0-16 2.5 2.5 0 0 1 2.5 2.5c0 .7-.3 1.4-.8 1.9l-.2.2a4 4 0 0 0 0 5.6A2.5 2.5 0 0 1 12 21z" stroke="currentColor" stroke-width="1.2" fill="none"/>
-          <circle cx="12" cy="8" r="0.8" fill="currentColor"/>
-          <circle cx="8.5" cy="11" r="0.6" fill="currentColor"/>
-          <circle cx="15.5" cy="12.5" r="0.6" fill="currentColor"/>
-        </svg>
-        <h3 class="text-xl font-semibold text-white">Color Grading</h3>
-      </div>
-      <p class="opacity-80 text-left leading-relaxed text-sm">
-        Cinematic tones, calibrated skin tones, film-style aesthetics.
-      </p>
-    </div>
+   <div class="group bg-zinc-800 p-6 shadow-xl transition transform hover:-translate-y-2 hover:bg-white">
+  <div class="flex items-center space-x-4 mb-4">
+    <svg class="w-10 h-10 text-zinc-300 shrink-0 transition group-hover:text-black" viewBox="0 0 24 24" fill="none">
+      <path d="M12 21a8 8 0 1 0 0-16 2.5 2.5 0 0 1 2.5 2.5c0 .7-.3 1.4-.8 1.9l-.2.2a4 4 0 0 0 0 5.6A2.5 2.5 0 0 1 12 21z" stroke="currentColor" stroke-width="1.2"/>
+      <circle cx="12" cy="8" r="0.8" fill="currentColor"/>
+      <circle cx="8.5" cy="11" r="0.6" fill="currentColor"/>
+      <circle cx="15.5" cy="12.5" r="0.6" fill="currentColor"/>
+    </svg>
+    <h3 class="text-xl font-semibold text-white transition group-hover:text-black">
+      Color Grading
+    </h3>
+  </div>
+  <p class="opacity-80 text-left leading-relaxed text-sm transition group-hover:text-black">
+    Cinematic tones, calibrated skin tones, film-style aesthetics.
+  </p>
+</div>
 
     <!-- Card 3: Motion Graphics -->
-    <div class="bg-zinc-800 p-6  shadow-xl hover:bg-zinc-800 transition transform hover:-translate-y-1">
-      <div class="flex items-center space-x-4 mb-4">
-        <!-- sparkles / magic wand icon -->
-        <svg class="w-10 h-10 text-zinc-300 shrink-0" viewBox="0 0 24 24" fill="none" aria-hidden="true">
-          <path d="M3 17l4-4 2 2-4 4-2-2zM13 7l6-6 2 2-6 6-2-2z" stroke="currentColor" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/>
-          <path d="M15 9l4 4" stroke="currentColor" stroke-width="1.2" stroke-linecap="round"/>
-          <circle cx="18" cy="4" r="0.6" fill="currentColor"/>
-        </svg>
-        <h3 class="text-xl font-semibold text-white">Motion Graphics</h3>
-      </div>
-      <p class="opacity-80 text-left leading-relaxed text-sm">
-        Minimal text animations, product reveals, logo animations.
-      </p>
-    </div>
+    <div class="group bg-zinc-800 p-6 shadow-xl transition transform hover:-translate-y-2 hover:bg-white">
+  <div class="flex items-center space-x-4 mb-4">
+    <svg class="w-10 h-10 text-zinc-300 shrink-0 transition group-hover:text-black" viewBox="0 0 24 24" fill="none">
+      <path d="M3 17l4-4 2 2-4 4-2-2zM13 7l6-6 2 2-6 6-2-2z" stroke="currentColor" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/>
+      <path d="M15 9l4 4" stroke="currentColor" stroke-width="1.2" stroke-linecap="round"/>
+      <circle cx="18" cy="4" r="0.6" fill="currentColor"/>
+    </svg>
+    <h3 class="text-xl font-semibold text-white transition group-hover:text-black">
+      Motion Graphics
+    </h3>
+  </div>
+  <p class="opacity-80 text-left leading-relaxed text-sm transition group-hover:text-black">
+    Minimal text animations, product reveals, logo animations.
+  </p>
+</div>
 
     <!-- Card 4: Social Media Content -->
-    <div class="bg-zinc-800 p-6  shadow-xl hover:bg-zinc-800 transition transform hover:-translate-y-1">
-      <div class="flex items-center space-x-4 mb-4">
-        <!-- share / network icon -->
-        <svg class="w-10 h-10 text-gray-300 shrink-0" viewBox="0 0 24 24" fill="none" aria-hidden="true">
-          <circle cx="18" cy="5" r="2" stroke="currentColor" stroke-width="1.2" />
-          <circle cx="6" cy="12" r="2" stroke="currentColor" stroke-width="1.2" />
-          <circle cx="18" cy="19" r="2" stroke="currentColor" stroke-width="1.2" />
-          <path d="M8 12.5l6.5-4.5" stroke="currentColor" stroke-width="1.2" stroke-linecap="round"/>
-          <path d="M8 11.5l6.5 4.5" stroke="currentColor" stroke-width="1.2" stroke-linecap="round"/>
-        </svg>
-        <h3 class="text-xl font-semibold text-white">Social Media Content</h3>
-      </div>
-      <p class="opacity-80 text-left leading-relaxed text-sm">
-        Reels, shorts, ad creatives — engagement-focused edits.
-      </p>
-    </div>
+    <div class="group bg-zinc-800 p-6 shadow-xl transition transform hover:-translate-y-2 hover:bg-white">
+  <div class="flex items-center space-x-4 mb-4">
+    <svg class="w-10 h-10 text-zinc-300 shrink-0 transition group-hover:text-black" viewBox="0 0 24 24" fill="none">
+      <circle cx="18" cy="5" r="2" stroke="currentColor" stroke-width="1.2" />
+      <circle cx="6" cy="12" r="2" stroke="currentColor" stroke-width="1.2" />
+      <circle cx="18" cy="19" r="2" stroke="currentColor" stroke-width="1.2" />
+      <path d="M8 12.5l6.5-4.5" stroke="currentColor" stroke-width="1.2" stroke-linecap="round"/>
+      <path d="M8 11.5l6.5 4.5" stroke="currentColor" stroke-width="1.2" stroke-linecap="round"/>
+    </svg>
+    <h3 class="text-xl font-semibold text-white transition group-hover:text-black">
+      Social Media Content
+    </h3>
+  </div>
+  <p class="opacity-80 text-left leading-relaxed text-sm transition group-hover:text-black">
+    Reels, shorts, ad creatives — engagement-focused edits.
+  </p>
+</div>
   </div>
 </section>
 
@@ -169,7 +178,7 @@
   <div class="overflow-hidden w-full h-full">
       <img 
     src="me.jpg" 
-    class="transition-transform duration-300 hover:scale-110 w-72 h-72 mt-3 object-cover mx-auto  mb-5 shadow-lg rounded-full" 
+    class="transition-transform duration-300 hover:scale-105 w-72 h-72 mt-3 object-cover mx-auto  mb-5 shadow-lg hover:-translate-y-2 rounded-full" 
   />
   </div>
 
@@ -278,10 +287,10 @@
 
 <!-- FOOTER -->
 <footer class="bg-zinc-900 py-8 text-center text-zinc-400">
-  <p>&copy; 2025 Your Name. All rights reserved.</p>
+  <p>&copy; 2025 _editor.issues . All rights reserved.</p>
 
   <!-- SVG ICONS -->
-  <div class="mt-4 flex justify-center gap-6 text-white">
+  <div class="mt-4 flex justify-center gap-2 text-white flex-col items-center ">
 
     <!-- Instagram -->
    <a 
@@ -316,7 +325,51 @@
     @_editor.issues
   </span>
 </a>
+<!-- EMAIL -->
+<a 
+  href="mailto:editor.issues1@gmail.com"
+  class="flex items-center gap-3 transition group"
+>
+  <!-- EMAIL ICON -->
+  <svg 
+    width="28" 
+    height="28"
+    viewBox="0 0 48 48"
+    class="transition transform group-hover:scale-110"
+  >
+    <!-- Envelope outline -->
+    <rect 
+      x="4" y="8" 
+      width="40" height="32" 
+      rx="4" ry="4" 
+      fill="white"
+      class="stroke-black transition group-hover:stroke-[#DB4437]"
+      stroke-width="3"
+    />
 
+    <!-- M shape -->
+    <path 
+      d="M8 12 L24 24 L40 12" 
+      fill="none"
+      class="stroke-black transition group-hover:stroke-[#DB4437]"
+      stroke-width="4"
+      stroke-linecap="round"
+      stroke-linejoin="round"
+    />
+  </svg>
+
+  <!-- EMAIL TEXT (WHITE → RED gradient on hover) -->
+  <span 
+    class="font-medium text-zinc-200 transition 
+           group-hover:bg-gradient-to-r 
+           group-hover:from-white 
+           group-hover:to-[#DB4437] 
+           group-hover:bg-clip-text 
+           group-hover:text-transparent"
+  >
+    editor.issues1@gmail.com
+  </span>
+</a>
   </div>
 </footer>
 <script>
@@ -335,3 +388,4 @@
 </script>
 </body>
 </html>
+        
