--- a/vid.html
+++ b/vid.html
@@ -75,7 +75,29 @@ const videos = [
     style: "Mixed",
     tools: "Alight Motion",
     duration: "4-5 day"
-  }
+  },
+  {
+    src: "3.mp4",
+    title: "AI in Coding",
+    category: "Coding & Tech",
+    price: "₹2500",
+    reviewer: "Codecandyy",
+    review: "Nice edit at an affordable price",
+    style: "Mixed",
+    tools: "Alight Motion",
+    duration: "4-5 day"
+  },
+  {
+    src: "4.mp4",
+    title: "AI in Coding",
+    category: "Coding & Tech",
+    price: "₹2500",
+    reviewer: "Codecandyy",
+    review: "Nice edit at an affordable price",
+    style: "Mixed",
+    tools: "Alight Motion",
+    duration: "4-5 day"
+    }
 ];
 
 let currentIndex = localStorage.getItem("videoIndex");
