--- a/index.html
+++ b/index.html
@@ -84,7 +84,15 @@
       <img src="2.jpg"
         class="w-full h-full object-cover opacity-90 transition duration-500 group-hover:brightness-50" />
       <div class="absolute inset-0 bg-black/20 group-hover:bg-black/40 transition duration-500"></div>
-      <div class="absolute bottom-5 left-5 text-white text-lg font-semibold drop-shadow-md">Paid Work</div>
+      <div class="absolute bottom-5 left-5 text-white text-lg font-semibold drop-shadow-md">MP3 To MP4</div>
+    </div>
+
+    <!-- Card 3 -->
+    <div class="work h-72 w-72 group overflow-hidden relative border border-black hover:border-white transition shadow-lg">
+      <img src="3.jpg"
+        class="w-full h-full object-cover opacity-90 transition duration-500 group-hover:brightness-50" />
+      <div class="absolute inset-0 bg-black/20 group-hover:bg-black/40 transition duration-500"></div>
+      <div class="absolute bottom-5 left-5 text-white text-lg font-semibold drop-shadow-md">Pro Sound Design</div>
     </div>
 
     
