--- a/vid.html
+++ b/vid.html
@@ -78,14 +78,14 @@ const videos = [
   },
   {
     src: "3.mp4",
-    title: "AI in Coding",
-    category: "Coding & Tech",
-    price: "₹2500",
-    reviewer: "Codecandyy",
-    review: "Nice edit at an affordable price",
-    style: "Mixed",
+    title: "Sound Design",
+    category: "SFX & Motion Graphics",
+    price: "₹3500",
+    reviewer: "Vansh.Marketing",
+    review: "Good work in decent price , Nice work.",
+    style: "Motion Graphics",
     tools: "Alight Motion",
-    duration: "4-5 day"
+    duration: "2-3 day"
   }
 ];
 
