Update testimonials with new names

--- a/index.html
+++ b/index.html
@@ -230,12 +230,12 @@
   <div class="grid grid-cols-1 sm:grid-cols-2 gap-10">
     <div class="bg-zinc-900 p-6 shadow-lg hover:bg-zinc-700 transition">
   <p class="mb-4">“Edit was smooth and exactly how I wanted. Timing and flow were perfect.”</p>
-  <span class="font-semibold text-white">— codebyaditya</span>
+  <span class="font-semibold text-white">— codecandyy</span>
 </div>
 
 <div class="bg-zinc-900 p-6 shadow-lg hover:bg-zinc-700 transition">
   <p class="mb-4">“Video looked sharp after his edit. Got good feedback from our team too.”</p>
-  <span class="font-semibold text-white">— Shauryahelps</span>
+  <span class="font-semibold text-white">— Wonderia</span>
 </div>
   </div>
 </section>
